[gd_scene load_steps=14 format=2]

[ext_resource path="res://art/logo/uniaodk.png" type="Texture" id=1]
[ext_resource path="res://scene/component/btn_normal.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/interface/main_menu.gd" type="Script" id=3]
[ext_resource path="res://art/logo/codemon.png" type="Texture" id=4]
[ext_resource path="res://art/logo/univali_2.png" type="Texture" id=5]
[ext_resource path="res://font/actor.tres" type="DynamicFont" id=6]
[ext_resource path="res://art/main_screen.png" type="Texture" id=7]
[ext_resource path="res://theme.tres" type="Theme" id=8]
[ext_resource path="res://font/freepixel.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 26
extra_spacing_bottom = 4
extra_spacing_char = 1
extra_spacing_space = 2
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=2]
resource_name = "clicked"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("btn_name:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4.94, 2.5 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "normal"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("btn_name:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4.94, -0.5 ) ]
}

[sub_resource type="Animation" id=4]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="main_menu" type="Control"]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.596078 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="background"]
modulate = Color( 1, 1, 1, 0.419608 )
margin_left = 195.0
margin_top = 59.0
margin_right = 828.0
margin_bottom = 218.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo_codemon" type="TextureRect" parent="background"]
anchor_right = 0.997
anchor_bottom = 1.0
margin_top = 68.0
margin_right = 0.0719604
margin_bottom = -390.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox_container" type="VBoxContainer" parent="background"]
margin_left = 399.367
margin_top = 270.081
margin_right = 491.367
margin_bottom = 381.081
rect_scale = Vector2( 2.5, 2.5 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new_game" parent="background/vbox_container" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 92.0
margin_bottom = 19.0
rect_scale = Vector2( 1, 1 )

[node name="continue" parent="background/vbox_container" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 23.0
margin_right = 92.0
margin_bottom = 42.0
rect_scale = Vector2( 1, 1 )
disabled = true

[node name="simulator" parent="background/vbox_container" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 46.0
margin_right = 92.0
margin_bottom = 65.0
rect_scale = Vector2( 1, 1 )
hint_tooltip = "Derrote o Bubble para desbloquear essa função."
theme = ExtResource( 8 )
disabled = true

[node name="btn_name" parent="background/vbox_container/simulator" index="0"]
margin_left = 4.94
margin_top = -0.5
margin_bottom = 38.5
custom_fonts/font = SubResource( 1 )

[node name="animation" parent="background/vbox_container/simulator" index="1"]
anims/clicked = SubResource( 2 )
anims/normal = SubResource( 3 )

[node name="option" parent="background/vbox_container" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 69.0
margin_right = 92.0
margin_bottom = 88.0
rect_scale = Vector2( 1, 1 )

[node name="exit" parent="background/vbox_container" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 92.0
margin_right = 92.0
margin_bottom = 111.0
rect_scale = Vector2( 1, 1 )

[node name="logo_uniaodk" type="TextureRect" parent="background"]
margin_left = 899.0
margin_top = 507.0
margin_right = 1021.0
margin_bottom = 586.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo_univali" type="TextureRect" parent="background"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -204.762
margin_top = -77.825
margin_right = -123.762
margin_bottom = -20.825
texture = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="version" type="Label" parent="background"]
margin_left = 8.0
margin_top = 576.0
margin_right = 316.0
margin_bottom = 657.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "version
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="animation" type="AnimationPlayer" parent="."]
anims/transition = SubResource( 4 )

[connection signal="pressed" from="background/vbox_container/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="background/vbox_container/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="background/vbox_container/simulator" to="." method="_on_simulator_pressed"]
[connection signal="pressed" from="background/vbox_container/option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="background/vbox_container/exit" to="." method="_on_exit_pressed"]
[connection signal="animation_finished" from="animation" to="." method="_on_animation_finished"]

[editable path="background/vbox_container/simulator"]
